--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "typescript": "^2.9.1"
   },
   "dependencies": {
-    "pug": "^2.0.3",
-    "lodash": "^4.17.10",
+    "js-yaml": "^3.13.1",
     "jsonschema": "^1.2.4",
-    "js-yaml": "^3.12.0"
+    "lodash": "^4.17.11",
+    "pug": "^2.0.3"
   }
 }
