--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -38,6 +38,7 @@
   "homepage": "https://github.com/WWAWing/WWAWing#readme",
   "devDependencies": {
     "@types/crypto-js": "^3.1.43",
+    "@types/ua-parser-js": "^0.7.33",
     "@wwawing/assets": "0.0.0",
     "@wwawing/common-interface": "0.0.0",
     "@wwawing/debug-server": "0.0.0",
@@ -48,6 +49,7 @@
     "shx": "^0.3.2",
     "ts-loader": "^4.3.0",
     "typescript": "^2.9.2",
+    "ua-parser-js": "^0.7.19",
     "uglify-js": "^3.3.27",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.20.2",
