--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "build": "lerna run build --stream --parallel && lerna run compile --scope @wwawing/styles",
     "deploy": "lerna run deploy --scope @wwawing/engine",
     "generate": "lerna exec --scope @wwawing/debug-server -- npm run generate",
-    "make-dist": "npm run build && lerna run make-dist --stream"
+    "make-dist": "npm run build && lerna run make-dist --stream",
+    "make-wwa-page": "ts-node ./scripts/make-wwa-page all",
+    "make-wwa-page:dev": "ts-node ./scripts/make-wwa-page dev",
+    "make-wwa-page:dist": "ts-node ./scripts/make-wwa-page dist"
   },
   "repository": {
     "type": "git",
@@ -30,7 +33,11 @@
   "lerna": "^3.13.1",
   "npm-run-all": "^4.1.3",
   "devDependencies": {
+    "@types/node": "^12.0.8",
+    "@wwawing/html-generator": "git+https://git@github.com/WWAWing/html-generator.git#include-lib",
     "lerna": "^3.18.2",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "ts-node": "^8.2.0",
+    "typescript": "^3.5.2"
   }
 }
