--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/loader",
-  "version": "0.0.0",
+  "version": "0.0.0-test.3",
   "description": "a World Wide Adventure mapdata loader for client-side web applications",
   "main": "./lib/wwaload.js",
   "scripts": {
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/WWAWing/WWALoader#readme",
   "devDependencies": {
-    "@wwawing/common-interface": "0.0.0",
+    "@wwawing/common-interface": "^0.0.0-test.3",
     "http-server": "^0.10.0",
     "npm-run-all": "^4.1.5",
     "shelljs": "^0.8.2",
