--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/engine",
-  "version": "3.2.2",
+  "version": "0.0.0-test.3",
   "description": "World Wide Adventure: an RPG Engine.",
   "main": "wwa.js",
   "scripts": {
@@ -40,11 +40,11 @@
     "@types/crypto-js": "^3.1.43",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "@types/webpack": "^4.39.1",
-    "@wwawing/assets": "0.0.0",
-    "@wwawing/common-interface": "0.0.0",
-    "@wwawing/debug-server": "0.0.0",
-    "@wwawing/loader": "0.0.0",
-    "@wwawing/styles": "0.0.0",
+    "@wwawing/assets": "^0.0.0-test.3",
+    "@wwawing/common-interface": "^0.0.0-test.3",
+    "@wwawing/debug-server": "^0.0.0-test.3",
+    "@wwawing/loader": "^0.0.0-test.3",
+    "@wwawing/styles": "^0.0.0-test.3",
     "crypto-js": "^3.1.9-1",
     "npm-run-all": "^4.1.5",
     "shelljs": "^0.8.2",
