--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "npm-run-all": "^4.1.3",
   "devDependencies": {
     "lerna": "^2.11.0",
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.3",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.4"
   }
 }
