--- a/packages/build-utils/package.json
+++ b/packages/build-utils/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@wwawing/build-utils",
-	"version": "0.0.0",
+	"version": "0.0.0-test.3",
 	"description": "build utilies for WWA Wing",
 	"main": "lib/make-wwapage.js",
 	"directories": {
@@ -25,10 +25,10 @@
 		"@types/node": "^10.5.1",
 		"@types/shelljs": "^0.8.0",
 		"@wwawing/html-generator": "git+https://git@github.com/WWAWing/html-generator.git#include-lib",
-		"@wwawing/engine": "3.2.2",
-		"@wwawing/assets": "0.0.0",
-		"@wwawing/loader": "0.0.0",
-		"@wwawing/debug-server": "0.0.0",
+		"@wwawing/engine": "0.0.0-test.3",
+		"@wwawing/assets": "0.0.0-test.3",
+		"@wwawing/loader": "0.0.0-test.3",
+		"@wwawing/debug-server": "0.0.0-test.3",
 		"glob": "^7.1.2",
 		"jszip": "^3.1.5",
 		"shelljs": "^0.8.2",
