--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/styles",
-  "version": "0.0.0",
+  "version": "0.0.0-test.3",
   "description": "WWA Wing stylesheet files",
   "main": "index.js",
   "scripts": {
