--- a/.github/actions/init/action.yml
+++ b/.github/actions/init/action.yml
@@ -10,7 +10,7 @@ runs:
   steps:
     - uses: actions/setup-node@v4
       with:
-        node-version: '22.x'
+        node-version: '22.20.0'
         registry-url: 'https://registry.npmjs.org'
     
     - name: "Configure"
@@ -49,5 +49,5 @@ runs:
 
     - name: "Install dependencies"
       shell: bash
-      # if: steps.restore-node-modules.outputs.cache-hit != 'true'
+      if: steps.restore-node-modules.outputs.cache-hit != 'true'
       run: npm ci
